--- a/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
+++ b/galasa-parent/dev.galasa.framework.log4j2.bridge/build.gradle
@@ -5,9 +5,10 @@ plugins {
 
 description = 'Galasa log4j2 Bridge'
 
-version = "0.21.0"
+version = "0.25.0"
 
 dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
 }
